fix: wrap excalidraw in position relative so that host need not add it explicitly to fix positioning when non zero offsets

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -8,6 +8,7 @@
 }
 
 .excalidraw {
+  position: relative;
   color: var(--text-primary-color);
   display: flex;
   top: 0;
